# DDP_CPP

./: .gitignore  .gitmodules  CMakeLists.txt  Cart_Pole.cpp  Differential_Drive  Differential_Drive.cpp  Double_Integrator  Double_Integrator.cpp  README.md  Single_Integrator  Single_Integrator.cpp  Single_Integrator_test  Single_Integrator_test.cpp  cost.cpp  ddp.cpp  dynamics.cpp  integrator.cpp  return_type_structs.cpp  sign_func.cpp  solution_struct.cpp  test  test.cpp
build_dir/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
build_dir/build_dir/build_dir/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
build_dir/build_dir/build_dir/lib/: Makefile  cmake_install.cmake
build_dir/build_dir/build_dir/test/: .lit_test_times.txt  Makefile  cmake_install.cmake  lit.site.cfg
build_dir/build_dir/build_dir/tools/: Makefile  cmake_install.cmake
build_dir/demos/ErrorEstimation/CustomModel/: Makefile  cmake_install.cmake  libcladCustomModelPlugin.dylib
build_dir/demos/ErrorEstimation/PrintModel/: Makefile  cmake_install.cmake
build_dir/lib/: Makefile  cmake_install.cmake
build_dir/lib/Differentiator/: Makefile  VCSVersion.inc  cmake_install.cmake
build_dir/test/: .lit_test_times.txt  Makefile  cmake_install.cmake  lit.site.cfg
build_dir/test/Arrays/Output/: ArrayErrorsForwardMode.C.script  ArrayInputsForwardMode.C.script  ArrayInputsReverseMode.C.script  ArrayInputsVectorForwardMode.C.script  Arrays.C.script
build_dir/test/ErrorEstimation/Output/: Assignments.C.script  BasicOps.C.script  ConditonalStatements.C.script  LoopsAndArrays.C.script  LoopsAndArraysExec.C.script
build_dir/test/FirstDerivative/Output/: Assignments.C.script  BasicArithmeticAddSub.C.script  BasicArithmeticAll.C.script  BasicArithmeticMulDiv.C.script  BuiltinDerivatives.C.script  CallArguments.C.script  ClassMethodCall.C.script  CodeGenSimple.C.script  CompoundAssignments.C.script  DependencyTracking.C.script  DiffInterface.C.script  FunctionCalls.C.script  FunctionCallsWithResults.C.script  FunctionsInNamespaces.C.script  FunctionsOneVariable.C.script  Loops.C.script  Namespaces.C.script  NonContinuous.C.script  Overloads.C.script  Recursive.C.script  Simple.C.script  StructGlobalObjects.C.script  StructMethodCall.C.script  Switch.C.script  SwitchErrors.C.script  SwitchInit.C.script  TemplateFunction.C.script  UnsupportedOpsWarn.C.script  Variables.C.script  VirtualMethodsCall.C.script
build_dir/test/ForwardMode/Output/: Casts.C.script  FunctorErrors.C.script  Functors.C.script  MemberFunctions.C.script  NonDifferentiable.C.script  NonDifferentiableError.C.script  NotEnoughArgError.C.script  Pointer.C.script  ReferenceArguments.C.script  SourceFnArg.C.script  TemplateFunctors.C.script  UserDefinedTypes.C.script  VectorMode.C.script  VectorModeInterface.C.script  constexprTest.C.script
build_dir/test/Functors/Output/: Simple.C.script
build_dir/test/Gradient/Output/: Assignments.C.script  DiffInterface.C.script  FunctionCalls.C.script  Functors.C.script  Gradients.C.script  Loops.C.script  MemberFunctions.C.script  Pointers.C.script  (+5 more)
build_dir/tools/: Makefile  cmake_install.cmake
include/: cost.hpp  ddp.hpp  dynamics.hpp  helper_funcs.hpp  integrator.hpp  my_base.hpp  my_class.hpp  plot_functions.hpp  return_type_structs.hpp  return_type_structs_copy.hpp  sign_func.hpp  timer.hpp
include/dynamics_derived/: CartPole.hpp  DifferentialDrive.hpp  DoubleIntegrator.hpp  SingleIntegrator.hpp
source/: cost.cpp  ddp.cpp  dynamics.cpp  helper_funcs.cpp  integrator.cpp  plot_functions.cpp  return_type_structs.cpp  sign_func.cpp  timer.cpp
source/dynamics_derived/: CartPole.cpp  DifferentialDrive.cpp  DoubleIntegrator.cpp  SingleIntegrator.cpp
source/timing_check.dSYM/Contents/: Info.plist
(+248 files in other folders)
